# kms-elements

debian/: changelog  rules
src/gst-plugins/: kmsalphablending.c  kmscompositemixer.c  kmsplayerendpoint.c
src/gst-plugins/recorderendpoint/: CMakeLists.txt  kmsavmuxer.c  kmsjpegmuxer.c  kmsjpegmuxer.h  kmsrecorderendpoint.c
src/gst-plugins/rtcpdemux/: CMakeLists.txt  kmsrtcpdemux.c
src/gst-plugins/rtpendpoint/: CMakeLists.txt  kms-rtp-enumtypes.h  kmsrtpconnection.c  kmsrtpconnection.h  kmsrtpendpoint-plugin-init.c  kmsrtpendpoint.c  kmsrtpfilterutils.c  kmsrtpfilterutils.h  kmssiprtpendpoint.c  kmssiprtpendpoint.h  kmssiprtpsession.c  kmssiprtpsession.h  kmssipsrtpsession.c  kmssipsrtpsession.h  kmssrtpconnection.c  kmssrtpconnection.h
src/gst-plugins/webrtcendpoint/: kmsiceniceagent.c  kmsiceniceagent.h  kmswebrtcbaseconnection.c  kmswebrtcbaseconnection.h  kmswebrtcendpoint.c  kmswebrtcsession.c  kmswebrtcsession.h  kmswebrtctransportsink.c  kmswebrtctransportsinknice.c  kmswebrtctransportsrcnice.c
src/server/: CMakeLists.txt
src/server/config/: HttpEndpoint.conf.ini  PlayerEndpoint.conf.ini  WebRtcEndpoint.conf.ini
src/server/implementation/: CertificateManager.cpp
src/server/implementation/objects/: ComposedObjectImpl.cpp  ComposedObjectImpl.hpp  FacadeRtpEndpointImpl.cpp  FacadeRtpEndpointImpl.hpp  HttpEndpointImpl.cpp  HttpPostEndpointImpl.cpp  PlayerEndpointImpl.cpp  PlayerEndpointImpl.hpp  RecorderEndpointImpl.cpp  RtpEndpointImpl.cpp  SipRtpEndpointImpl.cpp  SipRtpEndpointImpl.hpp  WebRtcEndpointImpl.cpp  (+1 more)
src/server/interface/: elements.MediaProfileSpecType.kmd.json  elements.PlayerEndpoint.kmd.json  elements.RecorderEndpoint.kmd.json  elements.SipRtpEndpoint.kmd.json  elements.WebRtcEndpoint.kmd.json
tests/check/element/: CMakeLists.txt  webrtcendpoint.c
tests/server/: CMakeLists.txt  sipRtpEndpoint.cpp  sipRtpEndpointPlay.cpp  sipRtpEndpoint_agnostic_srtp.cpp
